@@ -89,6 +89,63 @@ var cGmail = {
 					var replyBox = this.lastDomToverify.document.getElementById('rc_' + i).firstChild.firstChild.firstChild.firstChild.firstChild.firstChild.firstChild.firstChild.firstChild.firstChild.firstChild.firstChild.firstChild;
 
 					var contenuMail = this.lastDomToverify.document.getElementById('mb_' + i);
+					
+
+					var listNodes = contenuMail.getElementsByTagName("a");
+				
+				
+					var monTexteMieux = "";
+
+					for (var i = 0; i < listNodes.length; i++) { 
+    					try {	 if (listNodes[i].getAttribute("href").indexOf("attid=") != -1)
+						{
+							var papa = listNodes[i].parentNode;
+							var papatexte = papa.innerHTML;
+
+							var reg=new RegExp("<b>[^<]*</b>", "gi"); //Élimination des scripts
+							papatexte = papatexte.replace(reg,"");
+
+							var reg=new RegExp("<a[^>]*>[^<]*</a>", "gi"); //Élimination des scripts
+							papatexte = papatexte.replace(reg,"");
+						
+							var reg=new RegExp("K", "gi"); //Élimination des scripts
+							papatexte = papatexte.replace(reg,"");
+
+							var reg=new RegExp("<br>", "gi"); //Élimination des scripts
+							papatexte = papatexte.replace(reg,"");
+
+							if ((papatexte / 1) < 3) //Jusqu'a 2k, ça PEUT être une signature.
+							{
+
+								var xhr_object = new XMLHttpRequest(); 
+								
+								
+								xhr_object.open("GET", "https://mail.google.com/mail/" + listNodes[i].getAttribute("href"), false);	
+								xhr_object.send(null);
+						
+						while(xhr_object.readyState != 4)
+							{ }
+							
+								var dataToTry = xhr_object.responseText;
+								
+								//Verify GPG'data presence
+								var firstPosition = dataToTry.indexOf("-----BEGIN PGP SIGNATURE-----");
+								var lastPosition = dataToTry.indexOf("-----END PGP SIGNATURE-----");	
+
+								if (firstPosition != -1 && lastPosition != -1)
+								{
+									monTexteMieux = dataToTry;
+								}
+	
+									
+
+							}
+		
+						} } catch(e) { alert(e); }
+	   				}
+
+					
+					
 					var range = this.lastDomToverify.document.createRange();
 					range.selectNode(contenuMail);
 					var documentFragment = range.cloneContents();
@@ -96,10 +153,13 @@ var cGmail = {
 					var d = documentFragment;
 					var str = s.serializeToString(d);
 					
-					contenuMail = Selection.wash(str);
+					if (monTexteMieux == "")
+						contenuMail = Selection.wash(str);
+					else
+						contenuMail = "-----BEGIN PGP SIGNED MESSAGE-----\nHash: SHA1\n\n" + Selection.wash(str) + monTexteMieux;
 					
 					var td = this.lastDomToverify.document.createElement("td");
-					
+					alert(contenuMail);
 					td.setAttribute("class","");
 					td.setAttribute("id","sm_verify");
 					
