@@ -1,3 +1,6 @@
+2007-03-20  Maximilien Cuony
+	* Beginning of attachements's sings verify
+
 2007-03-14  Maximilien Cuony
 	* Export system
 	* If user cancel an action (like ask for password or select a key), the action is now stopped, and no error message appear !
